8260225: [lworld] C1's delayed load indexed optimization sets incorrect type

Reviewed-by: fparain